<resources>
    <string name="app_name">RenTool</string>
    <string name="todo">TODO</string>
    <string name="e_mail">E-mail</string>
    <string name="welcome">Welocme Back.</string>
    <string name="sign_in_to_continue">Sign In to continue</string>
    <string name="gmail_com">\@gmail.com</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="continue_as_a_guest">Continue as a Guest</string>
    <string name="join_parkal_today_sign_up">Join ParKal today ,SIGN UP</string>
    <string name="com_logo">TODO</string>
    <string name="hello_there_welcome"><![CDATA[Hello There & Welcome]]></string>
    <string name="don_t_have_and_account">don\'t have and account?, Sign Up</string>
    <string name="select">Select Item</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>=

</resources>