<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".activities.Login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/logo_img"
                    android:layout_width="247dp"
                    android:layout_height="163dp"
                    android:contentDescription="@string/com_logo"
                    android:src="@drawable/rentoolcut"
                    android:transitionName="logo_image" />

                <TextView
                    android:id="@+id/logo_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bungee"
                    android:text="Welcome Back."
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:transitionName="logo_text" />


                <TextView
                    android:id="@+id/logo_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/antic"
                    android:text="@string/sign_in_to_continue"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:transitionName="logo_desc" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/emailTxt"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#000000"
                        app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
                        app:endIconMode="clear_text"
                        app:startIconDrawable="@drawable/mail_icon"
                        app:startIconTint="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/emailEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="15dp"
                            android:hint="Email"
                            android:textColor="@color/black"
                            android:textColorHint="#000000"
                            android:transitionName="email_tran" />

                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/passTxt"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:textColorHint="#000000"
                        app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/black"
                        app:startIconDrawable="@drawable/pass_icon"
                        app:startIconTint="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/passwordEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:textColor="@color/black"
                            android:transitionName="pass_tran" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <CheckBox
                        android:id="@+id/rememberMe"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="start"
                        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                        android:text="Remember me"
                        android:textColor="@color/black"
                        android:buttonTint="@color/black"/>

                    <Button
                        android:id="@+id/forgotpassBtn"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginLeft="50dp"
                        android:background="#00000000"
                        android:elevation="0dp"
                        android:text="@string/forgot_password"
                        android:textColor="#000"
                        android:textSize="12sp" />



                </LinearLayout>

                <Button
                    android:background="@drawable/rounded"
                    android:id="@+id/signinBtn"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="5dp"
                    android:backgroundTint="#000"
                    android:text="@string/sign_in"
                    android:textColor="#fff"
                    android:transitionName="submit_btn" />

                <Button
                    android:id="@+id/signupBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_margin="5dp"
                    android:background="#00000000"
                    android:elevation="0dp"
                    android:fontFamily="@font/antic"
                    android:minHeight="48dp"
                    android:text="@string/don_t_have_and_account"
                    android:textColor="#000"
                    android:textSize="12sp"
                    android:transitionName="login_signup_tran"
                    tools:ignore="TouchTargetSizeCheck" />

<!--                <ProgressBar-->
<!--                    android:id="@+id/progree_bar"-->
<!--                    style="?android:attr/progressBarStyleLarge"-->
<!--                    android:indeterminateTint="@color/yellow"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:visibility="visible"-->
<!--                    app:layout_constraintLeft_toLeftOf="parent"-->
<!--                    app:layout_constraintRight_toRightOf="parent"-->
<!--                    app:layout_constraintTop_toTopOf="parent"-->
<!--                    app:layout_constraintBottom_toBottomOf="parent" />-->



            </LinearLayout>



        </LinearLayout>

    </ScrollView>



</LinearLayout>